--- a/src/index.css
+++ b/src/index.css
@@ -35,17 +35,17 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+
+
+.square {
+  width: 80px;  
+  height: 80px; 
+  font-size: 48px; 
+  font-weight: bold;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
+
+
 button:hover {
   border-color: #646cff;
 }
