--- a/src/index.css
+++ b/src/index.css
@@ -38,20 +38,34 @@ h1 {
 
 
 .square {
-  width: 80px;  
-  height: 80px; 
-  font-size: 48px; 
+  width: 80px;
+  height: 80px;
+  font-size: 48px;
   font-weight: bold;
   cursor: pointer;
+  background: #fff;
+  border: 2px solid #333;
+  padding: 0; 
+  margin: 0;  
+  outline: none;
+  box-sizing: border-box; 
+}
+.square:focus {
+  outline: none;
+  border: 2px solid #333;
+  padding: 0;             
+  margin: 0;              
+  background: #ddd;       
 }
 
 
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.square:focus,
+.square:active {
+  background: #ddd;
 }
 
 @media (prefers-color-scheme: light) {
@@ -65,4 +79,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.board-row {
+  display: flex;
+}
+
+.status {
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: bold;
 }
